@@ -9,6 +9,10 @@ Almer:
 	* Add csv default importing + probing.
 	* Improve font preview in cell format dialog.
 
+Andreas J. Guelzow:
+	* Fix bugs in analysis-tools' t-test.
+	* Finish two-factor anova tool in analysis-tools.
+
 Jody:
 	* Even more missing files.
 	* Crash after exiting 1 of many shared views.
