@@ -1,3 +1,8 @@
+2001-07-15  Andreas J. Guelzo  <aguelzow@math.concordia.ab.ca>
+
+	* src/analysis-tools.c (anova_two_factor_with_r_tool): Finish
+ 	implementation.
+
 2001-07-15  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* src/workbook-control-gui.c:
